--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^2.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.1.2",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "ignore-styles": "^5.0.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.6.1",
     "nodemailer": "^4.6.8",
     "raven": "^2.6.3",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.1.0",
